# AgentConnect

./: .cursorrules  .gitignore  PLANNING_COMPLETE.md  README.md
backend/: .env.example  .gitignore  README.md  TESTING.md  env.example  pyproject.toml  pytest.ini  run_tests.py  test.env
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  capabilities.py  health.py  mcp_servers.py  organizations.py
backend/app/core/: config.py  database.py  logging.py  middleware.py  security.py
backend/app/models/: mcp_server.py  organization.py  user.py
backend/app/schemas/: mcp_protocol.py  mcp_server.py  organization.py
backend/app/services/: auth.py  capabilities.py  health.py  logto_service.py  mcp_registration.py  mcp_server.py
backend/app/tests/: README.md  __init__.py  conftest.py
backend/app/tests/features/auth/: test_authgateway.py  test_oidc.py
backend/app/tests/features/capabilities/: __init__.py  test_discovery.py
backend/app/tests/features/health/: __init__.py  test_monitoring.py
backend/app/tests/features/mcp_servers/: __init__.py  test_api.py  test_mcp_api.py  test_mcp_protocol.py  test_mcp_registration_service.py  test_schemas.py  test_services.py
backend/app/tests/features/organizations/: __init__.py  test_api.py
backend/app/tests/features/sample_mcp_servers/: filesystem_server.py  github_server.py  test_database_server.py  test_filesystem_server.py  test_github_server.py  test_sprintconnect_integration.py
docs/: API.md  API_INTERFACE_SPECIFICATION.md  ARCHITECTURE.md  DATA_MODEL.md  FRONTEND_BACKEND_INTEGRATION_SUMMARY.md  OPERATIONS.md  SECURITY.md  USER_STORIES.md
frontend/: README.md  env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  chat.spec.ts  discovery.spec.ts  registry.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/__tests__/: basic.test.ts
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: DashboardPage.tsx  NotFoundPage.tsx  SettingsPage.tsx
frontend/src/services/: authService.ts  mcpService.ts
sample_mcp_servers/: README.md  database_server.py
(+31 files in other folders)
